fix: align kaomoji in the middle

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -243,6 +243,7 @@ pre > code {
 
 code[role="img"] {
   display: inline-block;
+  vertical-align: middle;
 }
 
 .figquote {
